--- a/_includes/about/home.html
+++ b/_includes/about/home.html
@@ -1,5 +1,5 @@
 <a href="{{ '/' | prepend: site.baseurl }}" target="_self">
-    <svg class="tf-social">
+    <svg class="tf-social" id="home">
       <use xlink:href="{{ '/img/bootstrap-icons.svg' | prepend: site.baseurl }}#{{- include.name -}}"/>
     </svg>
     <span>{{ include.label }}</span>
