--- a/css/techfolio-theme/lime.css
+++ b/css/techfolio-theme/lime.css
@@ -17,6 +17,9 @@
   --tf-footer-bg-color: var(--tf-green4);
   --tf-projects-bg-color: var(--tf-green4);
 }
+#home{
+  fill: rgba(0, 0, 0, 0.9);
+}
 
 h1,h2,h3,h4,h5 {
   color: var(--tf-green1);
