--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
       <a class="navbar-brand" href="{{ '/' | prepend: site.baseurl }}">&nbsp{{ site.data.bio.basics.name }}</a>
   <div class="ms-auto">
       <ul class="navbar-nav mb-2 mb-lg-0">
-        <a class="nav-link" href="{{ '/projects' | prepend: site.baseurl }}">Projects</a>
+        <a class="nav-link" href="{{ '/projects' | prepend: site.baseurl }}">My Work</a>
         <a class="nav-link" href="{{ '/resume.html' | prepend: site.baseurl }}">Resume</a>
       </ul>
     </div>
