--- a/_includes/projects/projects.html
+++ b/_includes/projects/projects.html
@@ -2,12 +2,12 @@
   <div class="container">
     <div class="row mb-3">
       <div class="col-md-6">
-        <h1 class="display-4 text-start">Projects</h1>
+        <h1 class="display-4 text-start">My Work</h1>
       </div>
     </div>
 
     <div class="vstack gap-3">
-      {% assign project_pages = site.pages | where: "type", "project" | sort: "date" | reverse %}
+      {% assign project_pages = site.pages | where: "type", "project" | sort: "order" %}
       {% for page in project_pages %}
         {% unless page.draft %}
           {% include projects/project-card.html page=page %}
@@ -19,7 +19,7 @@
     </div>
 
     {% if project_pages.size > include.limit %}
-      <p class="text-center pt-4"><a href="{{ site.baseurl}}/projects/">See all {{ project_pages.size }} projects</a></p>
+      <p class="text-center pt-4"><a href="{{ site.baseurl}}/projects/">Show all ({{ project_pages.size }})</a></p>
     {% endif %}
 
   </div>
