--- a/_layouts/missingpage.html
+++ b/_layouts/missingpage.html
@@ -8,15 +8,6 @@ layout: default
   <div class="container">
     <h1 class="display-4">Page Not Found</h1>
     <p>Perhaps you were looking for one of the following:</p>
-
-    <h3>Essays</h3>
-    <ul>
-      {% assign essay_pages = site.pages | where: "type", "essay" | sort: "date" | reverse %}
-      {% for page in essay_pages %}
-      <li><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></li>
-      {% endfor %}
-    </ul>
-
     <h3>Projects</h3>
     <ul>
       {% assign project_pages = site.pages | where: "type", "project" | sort: "title" %}
@@ -24,6 +15,7 @@ layout: default
       <li><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></li>
       {% endfor %}
     </ul>
+    <p>Or view <a href="{{ '/resume.html' | prepend: site.baseurl }}">my Resume</a></p>
   </div>
 </div>
 
